test/sema/typeck/struct/mod-not-accessible.out
error: element is not accessible.
--> mod-not-accessible.dora:1:10
 | fn f() { foo::Foo(1i32); }
            ~~~~~~~~~~~~~~
 | mod foo { struct Foo(Int32) }
 | 
1 error found.
