test/sema/typeck/struct/mod-not-accessible.dora
fn f() { foo::Foo(1i32); }
mod foo { struct Foo(Int32) }
